--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 </div>
 <div>
 <h1 class="text-lg font-black leading-tight tracking-tight text-primary">医療×経営戦略</h1>
-<p class="text-[10px] font-bold text-gray-500 uppercase">lio-solutions</p>
+<p class="text-[10px] font-bold text-gray-500 ">lio-solutions</p>
 </div>
 </div>
 <nav class="hidden lg:flex items-center gap-8">
