--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
 </div>
 <div>
 <h1 class="text-lg font-black leading-tight tracking-tight text-primary">医療×経営戦略</h1>
-<p class="text-[10px] font-bold text-gray-500 ">lio-solutions</p>
 </div>
 </div>
 <nav class="hidden lg:flex items-center gap-8">
@@ -285,7 +284,7 @@
 <h3 class="text-xl font-black text-primary mb-4 leading-tight">出張型身体ケア<br/>コンディショニング</h3>
 <p class="text-sm text-text-muted leading-relaxed mb-6">専門資格保持者がオフィスや工場へ。肩こり・腰痛のコンディショニングや、体調管理研修を御社にマッチした形式で実施します。</p>
 <div class="text-left bg-gray-50 p-4 text-xs font-bold text-primary w-full">
-                        ・ロコモティブシンドローム（転倒予防）対策<br/>
+                        ・ロコモティブシンドローム対策<br/>
                         ・肩こり、腰痛対策ストレッチ指導<br/>
                         ・特定保健指導（メタボ）対策セミナー
                     </div>
