会社イメージ画像①変更

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 <div class="grid gap-8 md:grid-cols-3">
 <div class="flex flex-col bg-primary-dark/50 border border-white/10 overflow-hidden shadow-2xl">
 <div class="h-64 w-full usp-image-container">
-<img alt="Medical Professional in Clinical Setting" class="h-full w-full object-cover vibrant-image transition-all duration-700" src="https://lh3.googleusercontent.com/aida-public/AB6AXuC2YcdxfaZ2WlEq9DDxFy1RZVx6AzfnN81xYK84ypVNZIIywUg8Be5STbgakN1yOoGrld9bqOTEj0jIYGLjPS3F1WTr2uWaPWOXNmdQ3iwgnXvcc7FHxCdGdI1w7H_9dngWopPqkTqVV6-VoQsSHF4kfrqufQCcMKW9AQSMKYzr5dU_bHXX7drgIshaVC2iQAJOalRN-4ptrYsMjNe_NtlbUdY4WAn5QQpT-wTvf9HhhtuhfYhOLsPzVm_G0UWb_C4wBhzHN5C54h0"/>
+<img alt="Medical Professional in Clinical Setting" class="h-full w-full object-cover vibrant-image transition-all duration-700" src="images/オフィスで勉強会.png"/>
 </div>
 <div class="p-8 space-y-6">
 <div class="flex h-14 w-14 items-center justify-center rounded-xl bg-white text-primary">
@@ -448,4 +448,5 @@
         無料相談を申し込む
     </a>
 </div>
+
 </body></html>
