USP画像①を変更

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 <div class="grid gap-8 md:grid-cols-3">
 <div class="flex flex-col bg-primary-dark/50 border border-white/10 overflow-hidden shadow-2xl">
 <div class="h-64 w-full usp-image-container">
-<img alt="Medical Professional in Clinical Setting" class="h-full w-full object-cover vibrant-image transition-all duration-700" src="images/オフィスで勉強会.png"/>
+<img alt="Medical Professional in Clinical Setting" class="h-full w-full object-cover vibrant-image transition-all duration-700" src="ペアストレッチ（体側）.ping"/>
 </div>
 <div class="p-8 space-y-6">
 <div class="flex h-14 w-14 items-center justify-center rounded-xl bg-white text-primary">
@@ -223,7 +223,7 @@
 <div class="flex flex-col lg:flex-row gap-8 bg-background-alt p-8 border border-gray-200">
 <div class="lg:w-1/3">
 <div class="aspect-video bg-gray-200 mb-4 overflow-hidden rounded shadow-md">
-<div class="w-full h-full bg-cover bg-center vibrant-image" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuDD3udI8V2v2QH6Hs6wDZuzBMuajNeI4ll5xvDIzz6T7d1R7SS6Mb886DN2MPb9Rg7a2Gv1m6GzpUFUU7s2rmwkMwj6u5ksGxHSEMbLkIabD8pAJFFIQ4jgouUZmqpeLV3Y4drwChACxLmMuNMmCux7MnzLjiOmMmaaA8HcAidRJte9TkACiG8gN7JtEkwblNSGZLO8e6t7NbrV9Rhvp9LsNEEuqcDxxeX865d4EOaKJLfI-AuY7NH9tO3vFmnH6Ui9B0bMUV7c0o4');"></div>
+<div class="w-full h-full bg-cover bg-center vibrant-image" style="background-image: url('images/オフィスで勉強会.png');"></div>
 </div>
 <h3 class="font-black text-primary text-lg">SANKEIプランニング株式会社様</h3>
 <p class="text-xs text-text-muted mt-1 font-bold">【企画・製作・施工 / 従業員数38名】</p>
@@ -450,3 +450,4 @@
 </div>
 
 </body></html>
+
