--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 <div class="grid gap-8 md:grid-cols-3">
 <div class="flex flex-col bg-primary-dark/50 border border-white/10 overflow-hidden shadow-2xl">
 <div class="h-64 w-full usp-image-container">
-<img alt="Medical Professional in Clinical Setting" class="h-full w-full object-cover vibrant-image transition-all duration-700" src="ペアストレッチ（体側）.ping"/>
+<img alt="Medical Professional in Clinical Setting" class="h-full w-full object-cover vibrant-image transition-all duration-700" src="ペアストレッチ（体側）.png"/>
 </div>
 <div class="p-8 space-y-6">
 <div class="flex h-14 w-14 items-center justify-center rounded-xl bg-white text-primary">
@@ -450,4 +450,5 @@
 </div>
 
 </body></html>
+
 
