USP画像①を変更-3

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 <div class="grid gap-8 md:grid-cols-3">
 <div class="flex flex-col bg-primary-dark/50 border border-white/10 overflow-hidden shadow-2xl">
 <div class="h-64 w-full usp-image-container">
-<img alt="Medical Professional in Clinical Setting" class="h-full w-full object-cover vibrant-image transition-all duration-700" src="images/ペアストレッチ（体側）.png"/>
+<img alt="Medical Professional in Clinical Setting" class="h-full w-full object-cover vibrant-image transition-all duration-700" src="https://github.com/lio-solutions/health-management-LP/blob/main/images/%E3%83%9A%E3%82%A2%E3%82%B9%E3%83%88%E3%83%AC%E3%83%83%E3%83%81%EF%BC%88%E4%BD%93%E5%81%B4%EF%BC%89.png?raw=true"/>
 </div>
 <div class="p-8 space-y-6">
 <div class="flex h-14 w-14 items-center justify-center rounded-xl bg-white text-primary">
@@ -450,6 +450,7 @@
 </div>
 
 </body></html>
+
 
 
 
