--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 </div>
 <div class="flex flex-col bg-primary-dark/50 border border-white/10 overflow-hidden shadow-2xl">
 <div class="h-64 w-full usp-image-container">
-<img alt="Strategic Executive Meeting" class="h-full w-full object-cover vibrant-image transition-all duration-700" src="https://lh3.googleusercontent.com/aida-public/AB6AXuBTmTQ9z0hRbW1ElTPLkm8pFZFr49RCvD8o0PazE8vKnrgAyfnjwO6J1ghDl6TSrfyjh7edNSsQ1oQjMZ9L0uI2_ZycwtMfO-CnwdMgyOZTS7t54QtWXQNGEpD1W9Mb9rX9OkBll2eR2VAmMzipwyfnkqj8M7nRpHdGE7HPKAkks0K5Hx2Z6WI5QIdypaYhaF3XChDEu6hwdOeAn8Wa_Evz2X-o-3waaSSSEHCTJiiEuGBqyKjTSa1mAflQ_QJpFbnqYSEcEqqGDnc"/>
+<img alt="Strategic Executive Meeting" class="h-full w-full object-cover vibrant-image transition-all duration-700" src="images/オフィスPC操作シーン②.png"/>
 </div>
 <div class="p-8 space-y-6">
 <div class="flex h-14 w-14 items-center justify-center rounded-xl bg-white text-primary">
@@ -450,6 +450,7 @@
 </div>
 
 </body></html>
+
 
 
 
