--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 </div>
 <div class="flex flex-col bg-primary-dark/50 border border-white/10 overflow-hidden shadow-2xl">
 <div class="h-64 w-full usp-image-container">
-<img alt="Crisis Management and Safety Assurance" class="h-full w-full object-cover vibrant-image transition-all duration-700" src="https://lh3.googleusercontent.com/aida-public/AB6AXuCQX0s83gIDlZxYLubXBmQ8GYvllwgvF4i6ZEtJTPkqFEKCiflSUtKTI97Xl-S7LWhzZW9AdueIbanCf5vDhM2fwRckG-dOqpFGAhwLU0U5J_mgulTxKD64s3DI6-i25XIMhZOlWjo-ngzBCHKIYeXJ1CEgRDb9xDOjgT5hzQAKLfK9FFG-SfF08lv7ggMVj7xLzhGrW1lSyuqaHgzJuklKu8qbb-gWiSC4FZv1FbLsF5UUWZbPLczgSasuHFdicHaYgZ2zcQKD590"/>
+<img alt="Crisis Management and Safety Assurance" class="h-full w-full object-cover vibrant-image transition-all duration-700" src="%E8%A8%93%E7%B7%B4%E3%82%B7%E3%83%BC%E3%83%B3%E2%91%A2.png"/>
 </div>
 <div class="p-8 space-y-6">
 <div class="flex h-14 w-14 items-center justify-center rounded-xl bg-white text-primary">
@@ -450,6 +450,7 @@
 </div>
 
 </body></html>
+
 
 
 
