--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 </div>
 <h3 class="text-xl font-bold border-b border-white/20 pb-4 italic">03. Risk Control</h3>
 <p class="text-base leading-relaxed text-justify-jp text-white/90">
-                            MFAインストラクターとして、不測の事態（心停止等）への対応、および日常の「労務リスク」を徹底管理。企業の防衛力を高め、経営者が安心して事業に集中できる環境を構築します。
+                            国際認定の応急救護法講師として、不測の事態（ケガや心停止等）への対応、および日常の「労務リスク」を徹底管理。企業の防衛力を高め、経営者が安心して事業に集中できる環境を構築します。
                         </p>
 </div>
 </div>
@@ -450,6 +450,7 @@
 </div>
 
 </body></html>
+
 
 
 
