USP①コメント修正

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 </div>
 <h3 class="text-xl font-bold border-b border-white/20 pb-4 italic">01. Medical Approach</h3>
 <p class="text-base leading-relaxed text-justify-jp text-white/90">
-                            柔道整復師として3万人以上の身体を診てきた「臨床の知見」に基づき、エビデンス（根拠）のある施策を提案。単なる運動推奨ではなく、痛みや不調の「根本解決」にアプローチします。
+                            医療従事者として3万人以上の身体を診てきた「臨床の知見」に基づき、エビデンス（根拠）のある施策を提案。単なる運動推奨ではなく、痛みや不調の「根本解決」にアプローチします。
                         </p>
 </div>
 </div>
@@ -206,7 +206,7 @@
 </div>
 <h3 class="text-xl font-bold border-b border-white/20 pb-4 italic">03. Risk Control</h3>
 <p class="text-base leading-relaxed text-justify-jp text-white/90">
-                            国際認定の応急救護法講師として、不測の事態（ケガや心停止等）への対応、および日常の「労務リスク」を徹底管理。企業の防衛力を高め、経営者が安心して事業に集中できる環境を構築します。
+                            国際認定の応急救護法（MFA）講師として、不測の事態（ケガや心停止等）への対応、および日常の「労務リスク」を分析。企業の防衛力を高め、経営者が安心して事業に集中できる環境を構築します。
                         </p>
 </div>
 </div>
@@ -450,6 +450,7 @@
 </div>
 
 </body></html>
+
 
 
 
