--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 </div>
 <div class="flex flex-col bg-primary-dark/50 border border-white/10 overflow-hidden shadow-2xl">
 <div class="h-64 w-full usp-image-container">
-<img alt="Strategic Executive Meeting" class="h-full w-full object-cover vibrant-image transition-all duration-700" src="%E3%82%AA%E3%83%95%E3%82%A3%E3%82%B9PC%E6%93%8D%E4%BD%9C%E3%82%B7%E3%83%BC%E3%83%B3%E2%91%A1.png"/>
+<img alt="Strategic Executive Meeting" class="h-full w-full object-cover vibrant-image transition-all duration-700" src="images/office-pc.png"/>
 </div>
 <div class="p-8 space-y-6">
 <div class="flex h-14 w-14 items-center justify-center rounded-xl bg-white text-primary">
@@ -198,7 +198,7 @@
 </div>
 <div class="flex flex-col bg-primary-dark/50 border border-white/10 overflow-hidden shadow-2xl">
 <div class="h-64 w-full usp-image-container">
-<img alt="Crisis Management and Safety Assurance" class="h-full w-full object-cover vibrant-image transition-all duration-700" src="%E8%A8%93%E7%B7%B4%E3%82%B7%E3%83%BC%E3%83%B3%E2%91%A2.png"/>
+<img alt="Crisis Management and Safety Assurance" class="h-full w-full object-cover vibrant-image transition-all duration-700" src="images/aed-training.png"/>
 </div>
 <div class="p-8 space-y-6">
 <div class="flex h-14 w-14 items-center justify-center rounded-xl bg-white text-primary">
@@ -450,6 +450,7 @@
 </div>
 
 </body></html>
+
 
 
 
