企業②：画像：更新、プロフィール：画像：更新

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 <div class="flex flex-col lg:flex-row gap-8 bg-background-alt p-8 border border-gray-200">
 <div class="lg:w-1/3">
 <div class="aspect-video bg-gray-200 mb-4 overflow-hidden rounded shadow-md">
-<div class="w-full h-full bg-cover bg-center vibrant-image" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuCSCkcwTRqxgv8bK3-dBK9mhuh61oREFuAUkcRMmWwpaZG5NrkQLltNdoEabeeX7LgRs4G6IEPpZBId9lnjCXFOZlSzUrXqBbwgK6lTrUcrZkESdHaiojcK-itdUHI0PlkHsGDgoe8y9lmJc9WqTzi4DGjr4LTBzs2JgXCI52b3GCPbY6rA5gJ30kSYGAlYUOau9P1RDVUSp0spcJkseBUTR1CZweBDpdS7wwYM0QX4m2HmdeURQ52h-_Sc3zPqNrqX2ziVb_6TKP0');"></div>
+<div class="w-full h-full bg-cover bg-center vibrant-image" style="background-image: url('images/office-ex.png');"></div>
 </div>
 <h3 class="font-black text-primary text-lg">労務管理永井事務所様</h3>
 <p class="text-xs text-text-muted mt-1 font-bold">【専門サービス業 / 従業員数10名】</p>
@@ -308,7 +308,7 @@
 <div class="mx-auto max-w-[1000px] px-4">
 <div class="flex flex-col md:flex-row gap-12 items-center">
 <div class="w-64 h-64 shrink-0 overflow-hidden border-4 border-primary shadow-2xl">
-<div class="w-full h-full bg-cover bg-center vibrant-image" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuDK_4XRQIMCw5GHLuVb2Kxs3ReGo578WlpeKVBiReDXy53GybqSd8Ih3Dak2otEsd5TOtwwO_fDPdIGCUbpyaYnqwhaaFbuVFQ_ZL-4HjOLh-czlI-UBRBJlGwYzyAIQLG6ouKBQh3HcxY1o50To0HqoRSZ7Zs38jNJrPMiRFYE-6BeIvW4-AiEw3blr2weCbV2auQWgaui-DtHiHLkPDsFp-wvMG5Wrc9nU1DWLBYoFYpqHbOHEi1HCyoXp1X_rhmAxRhcTJkEWG8');"></div>
+<div class="w-full h-full bg-cover bg-center vibrant-image" style="background-image: url('images/suit-up.png');"></div>
 </div>
 <div class="flex-1">
 <p class="text-secondary font-black tracking-widest uppercase mb-2">Consultant Profile</p>
@@ -450,6 +450,7 @@
 </div>
 
 </body></html>
+
 
 
 
