サービス②：テキスト：更新

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 <span class="material-symbols-outlined text-4xl">accessibility_new</span>
 </div>
 <h3 class="text-xl font-black text-primary mb-4 leading-tight">出張型身体ケア<br/>コンディショニング</h3>
-<p class="text-sm text-text-muted leading-relaxed mb-6">専門資格保持者がオフィスや工場へ。肩こり・腰痛のコンディショニングや、体調管理研修を御社にマッチした形式で実施します。</p>
+<p class="text-sm text-text-muted leading-relaxed mb-6">専門資格保持者がオフィスや工場へ。肩こり・腰痛のコンディショニングや、体調管理研修を御社に合わせた形で実施します。</p>
 <div class="text-left bg-gray-50 p-4 text-xs font-bold text-primary w-full">
                         ・ロコモティブシンドローム対策<br/>
                         ・肩こり、腰痛対策ストレッチ指導<br/>
@@ -450,6 +450,7 @@
 </div>
 
 </body></html>
+
 
 
 
