メモ帳コードより回帰

--- a/index.html
+++ b/index.html
@@ -443,4 +443,9 @@
         </div>
 </div>
 </footer>
+<div class="fixed bottom-0 left-0 w-full bg-white border-t border-gray-200 p-4 md:hidden z-40">
+<a class="flex w-full items-center justify-center bg-secondary py-4 text-sm font-bold text-white shadow-xl" href="#contact">
+        無料相談を申し込む
+    </a>
+</div>
 </body></html>
