過去更新から巻き戻し

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 <div class="grid gap-8 md:grid-cols-3">
 <div class="flex flex-col bg-primary-dark/50 border border-white/10 overflow-hidden shadow-2xl">
 <div class="h-64 w-full usp-image-container">
-<img alt="Medical Professional in Clinical Setting" class="h-full w-full object-cover vibrant-image transition-all duration-700" src="https://lh3.googleusercontent.com/aida-public/AB6AXuC2YcdxfaZ2WlEq9DDxFy1RZVx6AzfnN81xYK84ypVNZIIywUg8Be5STbgakN1yOoGrld9bqOTEj0jIYGLjPS3F1WTr2uWaPWOXNmdQ3iwgnXvcc7FHxCdGdI1w7H_9dngWopPqkTqVV6-VoQsSHF4kfrqufQCcMKW9AQSMKYzr5dU_bHXX7drgIshaVC2iQAJOalRN-4ptrYsMjNe_NtlbUdY4WAn5QQpT-wTvf9HhhtuhfYhOLsPzVm_G0UWb_C4wBhzHN5C54h0"/>
+<img alt="Medical Professional in Clinical Setting" class="h-full w-full object-cover vibrant-image transition-all duration-700" src="images/pair-stretch.png"/>
 </div>
 <div class="p-8 space-y-6">
 <div class="flex h-14 w-14 items-center justify-center rounded-xl bg-white text-primary">
@@ -184,7 +184,7 @@
 </div>
 <div class="flex flex-col bg-primary-dark/50 border border-white/10 overflow-hidden shadow-2xl">
 <div class="h-64 w-full usp-image-container">
-<img alt="Strategic Executive Meeting" class="h-full w-full object-cover vibrant-image transition-all duration-700" src="https://lh3.googleusercontent.com/aida-public/AB6AXuBTmTQ9z0hRbW1ElTPLkm8pFZFr49RCvD8o0PazE8vKnrgAyfnjwO6J1ghDl6TSrfyjh7edNSsQ1oQjMZ9L0uI2_ZycwtMfO-CnwdMgyOZTS7t54QtWXQNGEpD1W9Mb9rX9OkBll2eR2VAmMzipwyfnkqj8M7nRpHdGE7HPKAkks0K5Hx2Z6WI5QIdypaYhaF3XChDEu6hwdOeAn8Wa_Evz2X-o-3waaSSSEHCTJiiEuGBqyKjTSa1mAflQ_QJpFbnqYSEcEqqGDnc"/>
+<img alt="Strategic Executive Meeting" class="h-full w-full object-cover vibrant-image transition-all duration-700" src="images/office-pc.png"/>
 </div>
 <div class="p-8 space-y-6">
 <div class="flex h-14 w-14 items-center justify-center rounded-xl bg-white text-primary">
@@ -192,13 +192,13 @@
 </div>
 <h3 class="text-xl font-bold border-b border-white/20 pb-4 italic">02. Management Strategy</h3>
 <p class="text-base leading-relaxed text-justify-jp text-white/90">
-                            店舗経営の最前線を経験したからこそ、経営者の「数字」への責任を理解しています。健康を「福利厚生」ではなく「投資」として捉え、生産性向上に直結するマネジメントを支援します。
+                            店舗経営の最前線を経験したからこそ、経営者の「数字」への責任を理解しています。健康を「福利厚生」ではなく「投資（ROI）」として捉え、生産性向上に直結するマネジメントを支援します。
                         </p>
 </div>
 </div>
 <div class="flex flex-col bg-primary-dark/50 border border-white/10 overflow-hidden shadow-2xl">
 <div class="h-64 w-full usp-image-container">
-<img alt="Crisis Management and Safety Assurance" class="h-full w-full object-cover vibrant-image transition-all duration-700" src="https://lh3.googleusercontent.com/aida-public/AB6AXuCQX0s83gIDlZxYLubXBmQ8GYvllwgvF4i6ZEtJTPkqFEKCiflSUtKTI97Xl-S7LWhzZW9AdueIbanCf5vDhM2fwRckG-dOqpFGAhwLU0U5J_mgulTxKD64s3DI6-i25XIMhZOlWjo-ngzBCHKIYeXJ1CEgRDb9xDOjgT5hzQAKLfK9FFG-SfF08lv7ggMVj7xLzhGrW1lSyuqaHgzJuklKu8qbb-gWiSC4FZv1FbLsF5UUWZbPLczgSasuHFdicHaYgZ2zcQKD590"/>
+<img alt="Crisis Management and Safety Assurance" class="h-full w-full object-cover vibrant-image transition-all duration-700" src="images/aed-training.png"/>
 </div>
 <div class="p-8 space-y-6">
 <div class="flex h-14 w-14 items-center justify-center rounded-xl bg-white text-primary">
@@ -223,7 +223,7 @@
 <div class="flex flex-col lg:flex-row gap-8 bg-background-alt p-8 border border-gray-200">
 <div class="lg:w-1/3">
 <div class="aspect-video bg-gray-200 mb-4 overflow-hidden rounded shadow-md">
-  <div class="w-full h-full bg-cover bg-center vibrant-image" style="background-image: url('/images/new-image.png');"></div>
+<div class="w-full h-full bg-cover bg-center vibrant-image" style="background-image: url('images/オフィスで勉強会.png');"></div>
 </div>
 <h3 class="font-black text-primary text-lg">SANKEIプランニング株式会社様</h3>
 <p class="text-xs text-text-muted mt-1 font-bold">【企画・製作・施工 / 従業員数38名】</p>
@@ -241,7 +241,7 @@
 <div class="flex flex-col lg:flex-row gap-8 bg-background-alt p-8 border border-gray-200">
 <div class="lg:w-1/3">
 <div class="aspect-video bg-gray-200 mb-4 overflow-hidden rounded shadow-md">
-<div class="w-full h-full bg-cover bg-center vibrant-image" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuCSCkcwTRqxgv8bK3-dBK9mhuh61oREFuAUkcRMmWwpaZG5NrkQLltNdoEabeeX7LgRs4G6IEPpZBId9lnjCXFOZlSzUrXqBbwgK6lTrUcrZkESdHaiojcK-itdUHI0PlkHsGDgoe8y9lmJc9WqTzi4DGjr4LTBzs2JgXCI52b3GCPbY6rA5gJ30kSYGAlYUOau9P1RDVUSp0spcJkseBUTR1CZweBDpdS7wwYM0QX4m2HmdeURQ52h-_Sc3zPqNrqX2ziVb_6TKP0');"></div>
+<div class="w-full h-full bg-cover bg-center vibrant-image" style="background-image: url('images/office-ex.png');"></div>
 </div>
 <h3 class="font-black text-primary text-lg">労務管理永井事務所様</h3>
 <p class="text-xs text-text-muted mt-1 font-bold">【専門サービス業 / 従業員数10名】</p>
@@ -282,7 +282,7 @@
 <span class="material-symbols-outlined text-4xl">accessibility_new</span>
 </div>
 <h3 class="text-xl font-black text-primary mb-4 leading-tight">出張型身体ケア<br/>コンディショニング</h3>
-<p class="text-sm text-text-muted leading-relaxed mb-6">専門資格保持者がオフィスや工場へ。肩こり・腰痛のコンディショニングや、体調管理研修を御社にマッチした形式で実施します。</p>
+<p class="text-sm text-text-muted leading-relaxed mb-6">専門資格保持者がオフィスや工場へ。肩こり・腰痛のコンディショニングや、体調管理研修を御社に合わせた形で実施します。</p>
 <div class="text-left bg-gray-50 p-4 text-xs font-bold text-primary w-full">
                         ・ロコモティブシンドローム対策<br/>
                         ・肩こり、腰痛対策ストレッチ指導<br/>
@@ -308,14 +308,14 @@
 <div class="mx-auto max-w-[1000px] px-4">
 <div class="flex flex-col md:flex-row gap-12 items-center">
 <div class="w-64 h-64 shrink-0 overflow-hidden border-4 border-primary shadow-2xl">
-<div class="w-full h-full bg-cover bg-center vibrant-image" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuDK_4XRQIMCw5GHLuVb2Kxs3ReGo578WlpeKVBiReDXy53GybqSd8Ih3Dak2otEsd5TOtwwO_fDPdIGCUbpyaYnqwhaaFbuVFQ_ZL-4HjOLh-czlI-UBRBJlGwYzyAIQLG6ouKBQh3HcxY1o50To0HqoRSZ7Zs38jNJrPMiRFYE-6BeIvW4-AiEw3blr2weCbV2auQWgaui-DtHiHLkPDsFp-wvMG5Wrc9nU1DWLBYoFYpqHbOHEi1HCyoXp1X_rhmAxRhcTJkEWG8');"></div>
+<div class="w-full h-full bg-cover bg-center vibrant-image" style="background-image: url('images/suit-up.png');"></div>
 </div>
 <div class="flex-1">
 <p class="text-secondary font-black tracking-widest uppercase mb-2">Consultant Profile</p>
 <h2 class="text-3xl font-black text-primary mb-1">渡邉 和人 <span class="text-sm font-medium text-gray-500 ml-2">Kazuto Watanabe</span></h2>
 <p class="text-lg font-bold text-primary mb-6 italic">「医療」と「経営」を橋渡しする専門家</p>
 <div class="space-y-4 text-sm leading-relaxed text-justify-jp border-l-2 border-gray-200 pl-6">
-<p>整形外科での臨床経験10年以上。延べ3万人以上の不調を改善してきた<strong>「リハビリ医療の現場」</strong>。そして、<strong>「企業でのマネジメントおよび店舗の経営者」</strong>として人財・数字・オペレーションを統括した現場。この両方を知るからこそ、単なるお題目の健康経営ではなく、現場が動き、利益が守られる戦略的なアプローチが可能です。</p>
+<p>整形外科での臨床経験10年以上。延べ3万人以上の不調を改善してきた<strong>「リハビリ医療の現場」</strong>。そして、<strong>「企業でのマネジメントおよび店舗の経営者」</strong>として人財・数字・オペレーションを統括した現場。この両極を知るからこそ、単なるお題目の健康経営ではなく、現場が動き、利益が守られる戦略的なアプローチが可能です。</p>
 <p>「従業員の健康こそが最大の経営資源である」という信念のもと、中小企業の「不調という名の負債」を資産に変える支援を行っています。</p>
 </div>
 <div class="flex flex-wrap gap-2 mt-8">
@@ -448,4 +448,19 @@
         無料相談を申し込む
     </a>
 </div>
+
 </body></html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
