--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html class="light" lang="ja"><head>
+<html class="light scroll-smooth" lang="ja">
+<head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>健康経営サポート事業 LP（最終ブラッシュアップ版）</title>
@@ -123,7 +124,7 @@
 </div>
 </div>
 </section>
-<section class="py-24 bg-background-alt" id="problem">
+<section class="py-24 bg-background-alt scroll-mt-24" id="problem">
 <div class="mx-auto max-w-[1000px] px-4">
 <div class="text-center mb-16">
 <h2 class="text-3xl font-black text-primary sm:text-4xl mb-4">御社に、このような「損失」は<br class="hidden sm:block"/>発生していませんか？</h2>
@@ -161,7 +162,7 @@
 </div>
 </div>
 </section>
-<section class="py-24 bg-primary text-white" id="solution">
+<section class="py-24 bg-primary text-white scroll-mt-24" id="solution">
 <div class="mx-auto max-w-[1200px] px-4">
 <div class="text-center mb-16">
 <h2 class="text-3xl font-black sm:text-4xl mb-6">実利なき健康経営は不要です。<br/>現場を知る「プロの介入」が組織を強くします。</h2>
@@ -213,7 +214,7 @@
 </div>
 </div>
 </section>
-<section class="py-24 bg-white" id="cases">
+<section class="py-24 bg-white scroll-mt-24" id="cases">
 <div class="mx-auto max-w-[1000px] px-4">
 <div class="text-center mb-16">
 <h2 class="text-3xl font-black text-primary">導入事例：東京商工会議所 認定モデル</h2>
@@ -272,10 +273,10 @@
 <h3 class="text-xl font-black text-primary mb-4 leading-tight">健康経営優良法人<br/>認定取得支援</h3>
 <p class="text-sm text-text-muted leading-relaxed mb-6">現状の可視化から申請実務、次年度に向けた改善策までを並走型・ハンズオンできめ細かくサポートします。</p>
 <div class="text-left bg-gray-50 p-4 text-xs font-bold text-primary w-full">
-                        ・現状診断 / 課題抽出<br/>
-                        ・認定申請実務補助<br/>
-                        ・ロードマップ作成
-                    </div>
+                            ・現状診断 / 課題抽出<br/>
+                            ・認定申請実務補助<br/>
+                            ・ロードマップ作成
+                        </div>
 </div>
 <div class="bg-white p-10 border-t-4 border-primary shadow-sm text-center flex flex-col items-center">
 <div class="mb-6 flex items-center justify-center w-16 h-16 bg-secondary rounded-full text-white shadow-md">
@@ -284,10 +285,10 @@
 <h3 class="text-xl font-black text-primary mb-4 leading-tight">出張型身体ケア<br/>コンディショニング</h3>
 <p class="text-sm text-text-muted leading-relaxed mb-6">専門資格保持者がオフィスや工場へ。肩こり・腰痛のコンディショニングや、体調管理研修を御社に合わせた形で実施します。</p>
 <div class="text-left bg-gray-50 p-4 text-xs font-bold text-primary w-full">
-                        ・ロコモティブシンドローム対策<br/>
-                        ・肩こり、腰痛対策ストレッチ指導<br/>
-                        ・特定保健指導（メタボ）対策セミナー
-                    </div>
+                            ・ロコモティブシンドローム対策<br/>
+                            ・肩こり、腰痛対策ストレッチ指導<br/>
+                            ・特定保健指導（メタボ）対策セミナー
+                        </div>
 </div>
 <div class="bg-white p-10 border-t-4 border-primary shadow-sm text-center flex flex-col items-center">
 <div class="mb-6 flex items-center justify-center w-16 h-16 bg-secondary rounded-full text-white shadow-md">
@@ -296,15 +297,15 @@
 <h3 class="text-xl font-black text-primary mb-4 leading-tight">リスク管理研修（EAP）・<br/>応急救護法講習</h3>
 <p class="text-sm text-text-muted leading-relaxed mb-6">MFA救急講習やEAP（Emergency Action Plan）の策定等、経営者が直面する「もしも」の時の備えを万全にします。</p>
 <div class="text-left bg-gray-50 p-4 text-xs font-bold text-primary w-full">
-                        ・実地AED講習（認定証発行）<br/>
-                        ・緊急時行動計画（EAP）策定<br/>
-                        ・ハラスメント防止マネジメント
-                    </div>
+                            ・実地AED講習（認定証発行）<br/>
+                            ・緊急時行動計画（EAP）策定<br/>
+                            ・ハラスメント防止マネジメント
+                        </div>
 </div>
 </div>
 </div>
 </section>
-<section class="py-24 bg-white" id="profile">
+<section class="py-24 bg-white scroll-mt-24" id="profile">
 <div class="mx-auto max-w-[1000px] px-4">
 <div class="flex flex-col md:flex-row gap-12 items-center">
 <div class="w-64 h-64 shrink-0 overflow-hidden border-4 border-primary shadow-2xl">
@@ -338,8 +339,8 @@
 <h3 class="font-bold text-primary text-lg">現場の従業員の作業時間を増加させたくないのですが。</h3>
 </div>
 <div class="mt-4 pl-9 text-sm leading-relaxed text-text-muted text-justify-jp">
-                        ご安心ください。主に業務の隙間時間を活用した「短時間集中型」のプログラムの実施を計画し、生産性を落とさずに実施します。
-                    </div>
+                            ご安心ください。主に業務の隙間時間を活用した「短時間集中型」のプログラムの実施を計画し、生産性を落とさずに実施します。
+                        </div>
 </div>
 <div class="bg-white border border-gray-200 shadow-sm p-8 rounded-sm">
 <div class="flex items-start gap-4">
@@ -347,8 +348,8 @@
 <h3 class="font-bold text-primary text-lg">健康経営の効果やメリットが見えにくいのですが。</h3>
 </div>
 <div class="mt-4 pl-9 text-sm leading-relaxed text-text-muted text-justify-jp">
-                        御社の状況に合わせ、助成金の活用も視野に入れた負担の少ないプランを用意したうえで効果やメリットをご説明します。また、病欠（アブセンティーズム）の削減はもちろん、高齢化や体調不良により「出勤しているがパフォーマンスが落ちている状態（プレゼンティーズム）」を抑制し、組織全体の生産性を維持・向上させることを目的としています。
-                    </div>
+                            御社の状況に合わせ、助成金の活用も視野に入れた負担の少ないプランを用意したうえで効果やメリットをご説明します。また、病欠（アブセンティーズム）の削減はもちろん、高齢化や体調不良により「出勤しているがパフォーマンスが落ちている状態（プレゼンティーズム）」を抑制し、組織全体の生産性を維持・向上させることを目的としています。
+                        </div>
 </div>
 <div class="bg-white border border-gray-200 shadow-sm p-8 rounded-sm">
 <div class="flex items-start gap-4">
@@ -356,20 +357,20 @@
 <h3 class="font-bold text-primary text-lg">まずはじめに、経営者は何から取り組めばいいですか？</h3>
 </div>
 <div class="mt-4 pl-9 text-sm leading-relaxed text-text-muted text-justify-jp">
-                        経営者様には「健康経営に取り組む」という方針を社内外に宣言していただくだけで結構です。具体的な制度設計や運用、従業員様への指導などは全てハンズオンでサポートいたしますので、本来の経営業務に集中いただけます。
-                    </div>
+                            経営者様には「健康経営に取り組む」という方針を社内外に宣言していただくだけで結構です。具体的な制度設計や運用、従業員様への指導などは全てハンズオンでサポートいたしますので、本来の経営業務に集中いただけます。
+                        </div>
 </div>
 </div>
 </div>
 </section>
-<section class="py-24 bg-white" id="contact">
+<section class="py-24 bg-white scroll-mt-24" id="contact">
 <div class="mx-auto max-w-[800px] px-4">
 <div class="bg-primary text-white p-12 text-center shadow-2xl">
 <h2 class="text-3xl font-black mb-4">まずは御社の「隠れた経営リスク」を<br/>可視化しませんか？</h2>
 <p class="text-secondary font-bold mb-8">無理な売り込みは一切いたしません。現状の整理だけでもお役立てください。</p>
 <div class="inline-block bg-white/10 px-8 py-3 text-sm font-bold border border-white/20">
-                    無料オンライン診断（30分）実施中
-                </div>
+                            無料オンライン診断（30分）実施中
+                        </div>
 </div>
 <div class="bg-background-alt p-10 shadow-lg border-x border-b border-gray-200">
 <form class="space-y-6">
@@ -448,19 +449,5 @@
         無料相談を申し込む
     </a>
 </div>
-
-</body></html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</body>
+</html>
